tests/errors/AssignToUndeclaredArray.imp
VAR
  a[42]
BEGIN
  b := a;
END
